[package]
name = "rust-roguelike-2022"
version = "0.1.0"
authors = ["Reuben reuben@koppenheffer.me"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { git="https://github.com/amethyst/bracket-lib.git" }
legion = { version = "=0.3.1", default-features = false, features = ["wasm-bindgen", "codegen"] }
serde = { version = "=1.0.115" }
ron = "=0.6.1"